--- a/styless.css
+++ b/styless.css
@@ -34,3 +34,62 @@ body{
     width: 5vh;
     margin-left: 50%;
 }
+
+.box {
+    width: 500px;
+    height: 500px;
+    border: 4px solid;
+    padding: 50px;
+    margin: 20px;
+    overflow: hidden;
+    margin-left: 70vh;
+    margin-top: 10vh;
+    font-family: "Gilroy ExtraBold";
+}
+
+#queen img{
+    width: 25vh;
+    margin-left: 13vh;
+    margin-top: 5vh;
+}
+
+.titel{
+    font-family: "Gilroy ExtraBold";
+    text-align: center;
+    margin-left: 5vh;
+    margin-top: 5vh;
+}
+[type="datum"] {
+    background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+}
+[type="datum"]::-webkit-inner-spin-button {
+    display: none;
+}
+[type="datum  "]::-webkit-calendar-picker-indicator {
+    opacity: 0;
+}
+
+label {
+    display: block;
+}
+input {
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 3px 5px;
+    box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+    width: 190px;
+}
+
+.box2{
+    width: 50%;
+    margin-left: 45vh;
+    color: rgb(255,192,203);
+    background: #333333;
+    height: 300px;
+    padding: 50px;
+    text-align: center;
+    overflow: hidden;
+    margin-top: 15vh;
+    font-family: "Gilroy ExtraBold";
+}
