--- a/styless.css
+++ b/styless.css
@@ -86,15 +86,17 @@ input {
     margin-left: 45vh;
     color: rgb(255,192,203);
     background: #333333;
-    height: 300px;
+    height: 70vh;
     padding: 50px;
     text-align: center;
     overflow: hidden;
-    margin-top: 15vh;
+    margin-top: 5vh;
     font-family: "Gilroy ExtraBold";
 }
-form {
 
+.weetjes{
+    text-align: left;
+    margin-top: 10vh;
 }
 input[type=text], input[type=password] {
     width: 100%;
@@ -134,6 +136,20 @@ button:hover {
 #insturen{
     height: 200px;
     width: 750px;
+}
+
+.weetjesgebruiker {
+    width: 500px;
+    border: 4px solid;
+    border-color: rgb(255,192,203);
+    padding: 50px;
+    margin: 20px;
+    margin-left: 110vh;
+    margin-top: -27vh;
+    height: 600px;
+    border: 4px solid;
+    border-color: #F06292;
+    overflow: auto;
 }
 
 
