--- a/styless.css
+++ b/styless.css
@@ -36,17 +36,26 @@ body{
 }
 
 .box {
-    width: 500px;
-    height: 500px;
+    /*width: 500px;*/
+    /*height: 500px;*/
     border: 4px solid;
     padding: 50px;
-    margin: 20px;
-    margin-left: 70vh;
-    margin-top: 10vh;
+    /*margin: 20px;*/
+    /*margin-left: 70vh;*/
+    /*margin-top: 10vh;*/
     font-family: "Gilroy ExtraBold";
-    overflow: visible;
+    /*overflow: visible;*/
+    margin: 0 auto;
+    width: 600px;
+    max-width: 100vw;
+    box-sizing: border-box;
+    min-height: 50vh;
+    /*bot*/
 }
-
+.random-box {
+    background-color: black;
+    color: white;
+}
 .boxadmin{
     background-color: lightblue;
     width: 500px;
@@ -150,6 +159,9 @@ button:hover {
     border: 4px solid;
     border-color: #F06292;
     overflow: auto;
+}
+.responsive{
+    
 }
 
 
