--- a/styless.css
+++ b/styless.css
@@ -36,22 +36,27 @@ body{
 }
 
 .box {
-    /*width: 500px;*/
-    /*height: 500px;*/
     border: 4px solid;
-    padding: 50px;
+    padding: 30px;
     /*margin: 20px;*/
-    /*margin-left: 70vh;*/
-    /*margin-top: 10vh;*/
+    margin-left: 25vh;
+    margin-top: 10vh;
     font-family: "Gilroy ExtraBold";
-    /*overflow: visible;*/
-    margin: 0 auto;
+    overflow: auto;
     width: 600px;
     max-width: 100vw;
     box-sizing: border-box;
-    min-height: 50vh;
+    max-height: 70vh;
+    float: left;
     /*bot*/
+
 }
+
+.boxes{
+
+}
+
+
 .random-box {
     background-color: black;
     color: white;
