--- a/styless.css
+++ b/styless.css
@@ -1,6 +1,15 @@
 body{
     margin: 0;
 }
+
+.btn-primary{
+    background-color: #F06292;
+    color: white;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .topnav {
     overflow: hidden;
     background-color: #333;
@@ -35,6 +44,21 @@ body{
     margin-left: 96.8vh;
 }
 
+.box0{
+    border: 4px solid;
+    padding: 30px;
+    /*margin: 20px;*/
+    margin-left: 65vh;
+    margin-top: 10vh;
+    font-family: "Gilroy ExtraBold";
+    overflow: auto;
+    width: 600px;
+    max-width: 100vw;
+    box-sizing: border-box;
+    max-height: 70vh;
+    float: left;
+    /*bot*/
+}
 .box {
     border: 4px solid;
     padding: 30px;
@@ -52,15 +76,12 @@ body{
 
 }
 
-.boxes{
-
-}
-
-
 .random-box {
     background-color: black;
     color: white;
+    margin-left: 65vh;
 }
+
 .boxadmin{
     background-color: lightblue;
     width: 500px;
@@ -165,8 +186,157 @@ button:hover {
     border-color: #F06292;
     overflow: auto;
 }
-.responsive{
-    
+
+.burgermenu{
+    display: none;
+}
+
+
+@media screen and (max-width: 600px) {
+    html{
+        width: 100%;
+    }
+
+    .burgermenu{
+display: block;
+width: 70vh;
+    }
+    /* Style the navigation menu */
+    .topnav2 {
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+    }
+
+    /* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav2 #myLinks {
+        display: none;
+    }
+
+    /* Style navigation menu links */
+    .topnav2 a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+
+    /* Style the hamburger menu */
+    .topnav2 a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    /* Add a grey background color on mouse-over */
+    .topnav2 a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    /* Style the active link (or home/logo) */
+    .active2 {
+        background-color: #333;
+        color: white;
+    }
+
+    .navigation{
+        display: none;
+    }
+
+    .box0{
+
+        padding: 30px;
+        /*margin: 20px;*/
+        font-family: "Gilroy ExtraBold";
+        overflow: auto;
+        width: 500px;
+        max-width: 90vw;
+        box-sizing: border-box;
+        max-height: 70vh;
+        margin-left: 2.5vh;
+        margin-top: 5vh;
+        margin-bottom: 10vh;
+        /*bot*/
+    }
+
+    .boxadmin{
+        background-color: lightblue;
+        width: 500px;
+        height: 100px;
+        overflow: auto;
+
+    }
+
+    .random-box {
+        background-color: black;
+        color: white;
+    }
+
+    .weetjesgebruiker {
+        width: 300px;
+        border: 4px solid;
+        border-color: rgb(255,192,203);
+        padding: 50px;
+        margin: 20px;
+        margin-left: -5vh;
+        margin-top: 10vh;
+        height: 450px;
+        border: 4px solid;
+        border-color: #F06292;
+        overflow: auto;
+    }
+
+    .welkomform{
+        width: 550px;
+        height: 450px;
+        padding: 10vh;
+        margin-top: -5vh;
+        float: left;
+
+
+    }
+
+    #insturen{
+        width: 30vh;
+        margin-left: -5vh;
+    }
+    #dag{
+        margin-left: -5vh;
+    }
+
+    .btn-primary{
+        margin-left: -5vh;
+    }
+
+    .random-box{
+        margin-left: 0vh;
+
+    }
+
+    #weetjeszoeker{
+        margin-left: 5vh;
+        text-align: left;
+    }
+    #dag{
+        margin-left: -1vh;
+        margin-bottom: 1vh;
+        margin-top: 1vh;
+    }
+
+    .wrapper{
+        width: 80%;
+    }
+    .btn-primary{
+        margin-left: 1vh;
+    }
+    .box{
+        width: 70%;
+        margin-left: 4vh;
+    }
 }
 
 
