--- a/styless.css
+++ b/styless.css
@@ -1,6 +1,10 @@
 body{
     margin: 0;
+
 }
+
+
+
 
 .btn-primary{
     background-color: #F06292;
@@ -10,53 +14,76 @@ body{
     margin-right: auto;
 }
 
-.topnav {
-    overflow: hidden;
+.logo{
+    float: left;
+    width: 60px;
+
+}
+
+header{
     background-color: #333;
 }
 
+.container{
+    width: 90%;
+    margin: 0 auto;
+}
+/* Add a black background color to the top navigation */
+.topnav {
+    width: 100%;
+    overflow: hidden;
+    font-family: "Trebuchet MS";
+
+}
+
+
+
+
+/* Style the links inside the navigation bar */
 .topnav a {
-    float:right;
-    color: white;
+    float: right;
+    text-align: right;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
+    padding-top: 1.5vh;
+
 }
 
+/* Change the color of links on hover */
 .topnav a:hover {
-    color: rgb(255,192,203);
-    opacity: 60%;
+    color: #F06292;
 }
 
-.topnav a.active {
-    color: rgb(255,192,203);
-    opacity: 80%;
+
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
 }
 
 .navigation{
-    font-family: "Trebuchet MS";
-}
-
-.navigation img{
-    overflow: hidden;
-    width: 5vh;
-    margin-left: 96.8vh;
+    font-family: sans-serif ;
 }
 
 .box0{
     border: 4px solid;
+    font-family: Arial;
+    font-weight: bold;
     padding: 30px;
-    /*margin: 20px;*/
-    margin-left: 65vh;
-    margin-top: 10vh;
-    font-family: "Gilroy ExtraBold";
+    text-align: center;
     overflow: auto;
     width: 600px;
+    height: 50vh;
     max-width: 100vw;
     box-sizing: border-box;
-    max-height: 70vh;
-    float: left;
+    max-height: 100vh;
+    margin-left: 68vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
     /*bot*/
 }
 .box {
@@ -65,7 +92,8 @@ body{
     /*margin: 20px;*/
     margin-left: 25vh;
     margin-top: 10vh;
-    font-family: "Gilroy ExtraBold";
+    font-family: Arial;
+    font-weight: bold;
     overflow: auto;
     width: 600px;
     max-width: 100vw;
@@ -77,9 +105,24 @@ body{
 }
 
 .random-box {
-    background-color: black;
+    background-color: #333;
     color: white;
-    margin-left: 65vh;
+    margin: auto;
+    width: 50%;
+    border: 4px solid #F06292;
+    padding: 2vh;
+    font-family: Arial;
+    font-weight: bold;
+}
+
+.agendaweetje{
+    width: 89vh;
+    background-color: #F06292;
+    margin: auto;
+    padding: 5vh;
+    font-family: Arial;
+    font-weight: bold;
+
 }
 
 .boxadmin{
@@ -87,11 +130,14 @@ body{
     width: 500px;
     height: 100px;
     overflow: auto;
+    font-family: Arial;
+    font-weight: bold;
 }
 
 
 .titel{
-    font-family: "Gilroy ExtraBold";
+    font-family: 'Oswald', sans-serif;
+    color: #F06292;
     text-align: center;
 }
 [type="datum"] {
@@ -126,12 +172,15 @@ input {
     text-align: center;
     overflow: hidden;
     margin-top: 5vh;
-    font-family: "Gilroy ExtraBold";
+    font-family: Arial;
+    font-weight: bold;
 }
 
 .weetjes{
     text-align: left;
     margin-top: 10vh;
+    font-family: Arial;
+    font-weight: bold;
 }
 input[type=text], input[type=password] {
     width: 100%;
@@ -166,6 +215,8 @@ button:hover {
     padding: 10vh;
     position: relative;
     margin-top: -5vh;
+    font-family: Arial;
+    font-weight: bold;
 }
 
 #insturen{
@@ -185,6 +236,8 @@ button:hover {
     border: 4px solid;
     border-color: #F06292;
     overflow: auto;
+    font-family: Arial;
+    font-weight: bold;
 }
 
 .burgermenu{
@@ -193,65 +246,15 @@ button:hover {
 
 
 @media screen and (max-width: 600px) {
-    html{
-        width: 100%;
-    }
 
-    .burgermenu{
-display: block;
-width: 70vh;
-    }
-    /* Style the navigation menu */
-    .topnav2 {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-    }
-
-    /* Hide the links inside the navigation menu (except for logo/home) */
-    .topnav2 #myLinks {
-        display: none;
-    }
-
-    /* Style navigation menu links */
-    .topnav2 a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
+    .logo{
+        width: 42px;
         display: block;
     }
-
-    /* Style the hamburger menu */
-    .topnav2 a.icon {
-        background: black;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    /* Add a grey background color on mouse-over */
-    .topnav2 a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    /* Style the active link (or home/logo) */
-    .active2 {
-        background-color: #333;
-        color: white;
-    }
-
-    .navigation{
-        display: none;
-    }
-
     .box0{
 
         padding: 30px;
         /*margin: 20px;*/
-        font-family: "Gilroy ExtraBold";
         overflow: auto;
         width: 500px;
         max-width: 90vw;
@@ -272,8 +275,22 @@ width: 70vh;
     }
 
     .random-box {
-        background-color: black;
+        background-color: #333;
         color: white;
+        margin: auto;
+        width: 80%;
+        border: 4px solid #F06292;
+        padding: 2vh;
+    }
+
+    .agendaweetje{
+        width: 56%;
+        background-color: #F06292;
+        margin: auto;
+        padding: 5vh;
+        height: 35vh;
+        overflow: auto;
+
     }
 
     .weetjesgebruiker {
@@ -312,14 +329,10 @@ width: 70vh;
         margin-left: -5vh;
     }
 
-    .random-box{
-        margin-left: 0vh;
 
-    }
 
     #weetjeszoeker{
-        margin-left: 5vh;
-        text-align: left;
+        text-align: center;
     }
     #dag{
         margin-left: -1vh;
@@ -336,6 +349,30 @@ width: 70vh;
     .box{
         width: 70%;
         margin-left: 4vh;
+    }
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
     }
 }
 
