--- a/styless.css
+++ b/styless.css
@@ -1,9 +1,25 @@
 body{
     margin: 0;
-
+    background-image: url("Images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 210vh;
 }
 
+.weetjesverzenden{
+    margin-left: 10vh;
+    font-weight: bolder;
+}
 
+.wrapper{
+    color: white;
+    background: rgba(0, 0, 0 ,0.7 );
+}
+
+.login{
+    color: white;
+    background: rgba(0, 0, 0 ,0.3 );
+    width: 100%;
+}
 
 
 .btn-primary{
@@ -16,58 +32,59 @@ body{
 
 .logo{
     float: left;
-    width: 60px;
+    width: 80px;
+    padding-top: 1vh;
 
 }
 
 header{
-    background-color: #333;
+    background-color: rgba(0, 0, 0 ,0.7 );
 }
 
 .container{
     width: 90%;
     margin: 0 auto;
+
+
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    width: 100%;
+    font-family: 'Righteous', cursive;
     overflow: hidden;
-    font-family: "Trebuchet MS";
 
 }
 
-
-
-
 /* Style the links inside the navigation bar */
 .topnav a {
+    display: block;
     float: right;
     text-align: right;
     display: block;
-    color: #f2f2f2;
+    color: #F06292;
     text-align: center;
     padding: 10px;
     text-decoration: none;
-    font-size: 20px;
-    padding-top: 1.5vh;
-
+    font-size: 25px;
+    padding-top: 3.5vh;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
     color: #F06292;
+    background-color: #333;
+    height: 4.5vh;
 }
+/* Add an active class to highlight the current page */
+.topnav a.active {
+    color: white;
 
-
+}
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
     display: none;
 }
 
-.navigation{
-    font-family: sans-serif ;
-}
 
 .box0{
     border: 4px solid;
@@ -77,13 +94,15 @@ header{
     text-align: center;
     overflow: auto;
     width: 600px;
-    height: 50vh;
+    height: 60vh;
     max-width: 100vw;
     box-sizing: border-box;
     max-height: 100vh;
     margin-left: 68vh;
     margin-top: 10vh;
     margin-bottom: 10vh;
+    background: rgba(0, 0, 0 ,0.5 );
+    color: white;
     /*bot*/
 }
 .box {
@@ -100,28 +119,33 @@ header{
     box-sizing: border-box;
     max-height: 70vh;
     float: left;
+    background: rgba(0, 0, 0 ,0.5 );
+    color: white;
     /*bot*/
 
 }
 
 .random-box {
-    background-color: #333;
+    background: rgba(0, 0, 0 ,0.5 );
     color: white;
     margin: auto;
-    width: 50%;
-    border: 4px solid #F06292;
+    height: 70vh;
+    width: 100%;
     padding: 2vh;
     font-family: Arial;
     font-weight: bold;
+
 }
 
 .agendaweetje{
     width: 89vh;
-    background-color: #F06292;
+    border: 4px solid #F06292;
+    background: rgba(0, 0, 0 ,0.5 );
     margin: auto;
     padding: 5vh;
     font-family: Arial;
     font-weight: bold;
+    display: none;
 
 }
 
@@ -225,6 +249,8 @@ button:hover {
 }
 
 .weetjesgebruiker {
+    background: rgba(0, 0, 0 ,0.5 );
+    color: white;
     width: 500px;
     border: 4px solid;
     border-color: rgb(255,192,203);
@@ -240,9 +266,7 @@ button:hover {
     font-weight: bold;
 }
 
-.burgermenu{
-    display: none;
-}
+
 
 
 @media screen and (max-width: 600px) {
